--- a/Website/index.html
+++ b/Website/index.html
@@ -62,8 +62,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Ich bin Emin Oklopcic</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Fachinformatiker,Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">Emin Oklopcic</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Fachinformatiker,Web Developer,Web Designer,Frontend Developer,Medien Designer, App Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -94,7 +94,7 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
+                  <p class="title-s">Skill Set</p>
                   <span>HTML</span> <span class="pull-right">80%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
@@ -107,12 +107,12 @@
                   </div>
                   <span>JAVSCRIPT</span> <span class="pull-right">30%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>ANGULAR</span> <span class="pull-right">20%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -194,7 +194,7 @@
               <span class="ico-circle"><i class="ion-camera"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Photography</h2>
+              <h2 class="s-title">Fotografie</h2>
               <p class="s-description text-center">
                 Durch meine Medienschule wurde ich gut mit dem Umgang von Fotokameras und Videos eingelernt. 
               </p>
@@ -221,7 +221,7 @@
               <span class="ico-circle"><i class="ion-paintbrush"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Graphic Design</h2>
+              <h2 class="s-title">Medien Design</h2>
               <p class="s-description text-center">
                 Erfahrung habe ich in meiner Vergangenheit mit Photoshop, Illustrator, InDesign und mit Adobe XD gesammelt. 
               </p>
@@ -246,7 +246,7 @@
   </section>
   <!--/ Section Services End /-->
 
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/post-4.jpg)">
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/bg12.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -308,7 +308,7 @@
               Portfolio
             </h3>
             <p class="subtitle-a">
-              Hier eine Auflistung meiner besten Arbeit.
+              Mein GitHub Profil: <a class="text-white" href="https://github.com/Dopaemin">Klicke hier</a>
             </p>
             <div class="line-mf"></div>
           </div>
