--- a/Website/index.html
+++ b/Website/index.html
@@ -25,7 +25,7 @@
 
 <body id="page-top">
 
-  <!--/ Nav Star /-->
+  <!--/ Nav /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll" href="#page-top">Emin Oklopcic</a>
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll" href="#service">Fähigkeiten</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Projekte</a>
+            <a class="nav-link js-scroll" href="#work">Zahlen</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
   </nav>
   <!--/ Nav End /-->
 
-  <!--/ Intro Skew Star /-->
+  <!--/ Intro/-->
   <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <!--/ Intro Skew End /-->
+  <!--/ Intro /-->
 
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
@@ -89,28 +89,28 @@
                       <p><span class="title-s">Name: </span> <span>Emin Oklopcic</span></p>
                       <p><span class="title-s">Profil: </span> <span>Auszubildender im Bereich Fachinformatik</span></p>
                       <p><span class="title-s">Email: </span> <span>oklopcicemin@gmail.com</span></p>
-                      <p href="https://www.linkedin.com/in/emin-oklopcic-12a6b319a/"><span class="title-s">LinkedIn: </span> <a class="e1 text-white"  target= "_blank" href="https://www.linkedin.com/in/emin-oklopcic-12a6b319a/">  Klicke hier</a></p>
+                      <p href="https://www.linkedin.com/in/emin-oklopcic-12a6b319a/"><span class="title-s">LinkedIn: </span> <a class="e1 text-white"  target= "_blank" href="https://www.linkedin.com/in/emin-oklopcic-12a6b319a/">  Klicke hier um mein Profil in LinkedIn zu sehen!</a></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill Set</p>
-                  <span>HTML</span> <span class="pull-right">80%</span>
+                  <p class="title-s">Programmierkenntnisse </p>
+                  <span>Swift</span> <span class="pull-right">70%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS</span> <span class="pull-right">60%</span>
+                  <span>Web Development</span> <span class="pull-right">80%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVSCRIPT</span> <span class="pull-right">30%</span>
+                  <span>Java</span> <span class="pull-right">40%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>ANGULAR</span> <span class="pull-right">20%</span>
+                  <span>Kotlin</span> <span class="pull-right">20%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -125,16 +125,14 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Ich bin Emin und momentan 22 Jahre alt. Ich habe 2020 meine Ausbildung bei SAP als Fachinformatiker im Bereich Anwendungsentwicklung begonnen
-                    und befinde mich derzeit im ersten Lehrjahr.
+                    Hi, ich bin Emin! Ich habe 2020 meine Ausbildung bei SAP als Fachinformatiker im Bereich Anwendungsentwicklung begonnen
+                    und befinde mich derzeit im zweiten Lehrjahr meiner Ausbildung.
                   </p>
                   <p class="lead">
-                    Meine Kreativität kennt keine Grenzen. Das ist der Grund wieso ich vor der Ausbildung eine Medien Schule besucht habe und meine Fachhochschulreife 
-                    mit dem Zusatz Medien-Design / Technische Dokumentation hinterlegt habe.
+                    Vor meiner Ausbildung habe ich meine Fachhochschulreife im Bereich Medien und Gestaltung gemacht. Nebenbei schaue und spiele ich gerne Fußball, treffe mich mit Freunden, arbeite an privaten Projekten und lese gerne.
                   </p>
                   <p class="lead">
-                    Mein Weg zur Informatik habe ich gefunden, weil ich sehr viele Ideen habe die ich persönlich sehr cool finde und mithilfe programmierens kann man 
-                    heut zu Tage seine Projekte selber aus dem Boden stampfen.
+                    Programmieren war für mich schon immer ein anziehendes und spannendes Thema, in das ich dank der Ausbildung bei der SAP sehr gut reinkomme. Mein Ziel wäre es eines Tages mal ein guter Full Stack Developer zu werden, sodass ich alle Prozesse von Front- bis Backend verstehen und ausführen kann.
                   </p>
                 </div>
               </div>
@@ -155,7 +153,7 @@
               Fähigkeiten
             </h3>
             <p class="subtitle-a">
-              Meine Fähigkeiten, in einer kurzen Übersicht dargestellt.
+              Meine Fähigkeiten oberflächlich in einer kurzen Übersicht dargestellt.
             </p>
             <div class="line-mf"></div>
           </div>
@@ -168,9 +166,9 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title"><span>Web Design</span></h2>
+              <h2 class="s-title"><span>Web Development</span></h2>
               <p class="s-description text-center">
-              Die richtige Wahl von Aufbau, Stukur und Kombination der Farben, Schriften, Bildern und Grafiken fallen mir heute sehr leicht, zudem macht mir das Konzipieren von Projekten sehr spaß.
+                Durch private Projekte und der Ausbildung habe ich viel Erfahrung gesammelt, wenn es darum geht kompetente und kreative Webseiten zu erstellen
               </p>
             </div>
           </div>
@@ -181,9 +179,9 @@
               <span class="ico-circle"><i class="ion-code-working"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Development</h2>
+              <h2 class="s-title">Programmieren</h2>
               <p class="s-description text-center">
-                Programmiererfahrung in HTML, CSS und JAVASCRIPT habe ich seit Ausbildung beginn. Momentan beschäftige ich mich mit Angular und Python.
+                Programmieren ist für mich eine Leidenschaft geworden. Abseits vom Arbeitsleben programmiere ich sehr gerne und habe auch einige private Projekte umgesetzt.
               </p>
             </div>
           </div>
@@ -194,9 +192,9 @@
               <span class="ico-circle"><i class="ion-camera"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Fotografie</h2>
+              <h2 class="s-title">Bild- und Videobearbeitung</h2>
               <p class="s-description text-center">
-                Durch meine Medienschule wurde ich gut mit dem Umgang von Fotokameras und Videos eingelernt. 
+                Durch meine Medienschule und meiner privaten Interessen, kann ich gut mit Photoshop, Premiere, Illustrator etc. arbeiten.
               </p>
             </div>
           </div>
@@ -207,10 +205,9 @@
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Responsive Design</h2>
+              <h2 class="s-title">Mobile Development</h2>
               <p class="s-description text-center">
-                Responsive Design finde ich persönlich sehr wichtig, immer mehr Menschen nutzen Websiten mit dem Handy. Deswegen 
-                versuche ich jede Website Responsive zu machen.
+                Mobile Development interessiert mich sehr, ich programmiere privat Apps in Swift und habe schon erste Erfahrungen im Bereich App Entwicklung im Beruf und Nebenjob sammeln können.
               </p>
             </div>
           </div>
@@ -221,9 +218,9 @@
               <span class="ico-circle"><i class="ion-paintbrush"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Medien Design</h2>
+              <h2 class="s-title">Kreativität</h2>
               <p class="s-description text-center">
-                Erfahrung habe ich in meiner Vergangenheit mit Photoshop, Illustrator, InDesign und mit Adobe XD gesammelt. 
+              Ich denke neuartig, originell, manchmal auch scheinbar ausgefallen oder verrückt, das zeichnet mich aus und das ist meine größte Stärke, kreativ zu denken.
               </p>
             </div>
           </div>
@@ -236,7 +233,7 @@
             <div class="service-content">
               <h2 class="s-title">Marketing </h2>
               <p class="s-description text-center">
-               Ich habe Marketing Kurse hinterlegt und zudem Interessiere ich mich persönlich sehr viel für Marketingpsychologie.
+               Marketing fand ich schon immer interessant, allgemein interessiere ich mich ums kreative Werben und im Bereich Marketing Psychologie.
               </p>
             </div>
           </div>
@@ -247,6 +244,7 @@
   <!--/ Section Services End /-->
 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/bg12.jpg)">
+    <section id="work" class="portfolio-mf sect-pt4 route">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -256,7 +254,7 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">2</p>
+              <p class="counter">11</p>
               <span class="counter-text">Fertige Projekte</span>
             </div>
           </div>
@@ -267,7 +265,7 @@
               <span class="ico-circle"><i class="ion-ios-calendar-outline"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">1</p>
+              <p class="counter">2</p>
               <span class="counter-text">Jahr Arbeitserfahrung</span>
             </div>
           </div>
@@ -278,7 +276,7 @@
               <span class="ico-circle"><i class="ion-ios-at"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">1</p>
+              <p class="counter">4</p>
               <span class="counter-text">Fertige Websites</span>
             </div>
           </div>
@@ -289,7 +287,7 @@
               <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">1</p>
+              <p class="counter">3</p>
               <span class="counter-text">Auszeichnungen</span>
             </div>
           </div>
@@ -298,175 +296,15 @@
     </div>
   </div>
 
-  <!--/ Section Portfolio Star /-->
-  <section id="work" class="portfolio-mf sect-pt4 route">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="title-box text-center">
-            <h3 class="title-a">
-              Portfolio
-            </h3>
-            <p class="subtitle-a">
-              Mein GitHub Profil: <a class="text-white" href="https://github.com/Dopaemin">Klicke hier</a>
-            </p>
-            <div class="line-mf"></div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/work-1.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/work-1.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-  </section>
+
+  
+  
+
+
   <!--/ Section Portfolio End /-->
     <!-- Copyright -->
   <div class="text-center text-white p-3" style="background-color: #dc3545;">
-    © 2021 Copyright:
+    © 2022 Copyright:
     <a class="text-white" href="https://www.linkedin.com/in/emin-oklopcic-12a6b319a/">Emin Oklopcic</a>
   </div>
   <!-- Copyright -->
