--- a/Website/home.html
+++ b/Website/home.html
@@ -56,7 +56,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro/-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/emin.gif)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
